@startuml

interface IDatabase


class SeatManager
{
 + GetAvailableSeats()
 - UpdateSeatStatus()
}
class MovieManager
{
 + GetMoviesDetails()
 - UpdateMovies()
}
class UserManager
{
+ GetLoginDetails()
+ Registration()
+ UpdateUserDetails()
}

class BookingManager
{
+ PlaceOrder()
+ UpdateMovies()
+ UpdateSeatStatus()
}

 MovieManager <-->  BookingManager
UserManager <--> BookingManager
SeatManager <--> BookingManager

class Movie
{
 -ID
 +Title
 +Genre
 +ReleaseDate
 +Director
}
class Seat
class user

class ConsoleHelper
class DrawSeatsTable

class MainMenu
class SubMenu
class UserMenu


@enduml